# blm3722-project

./: .gitignore  README.md  pyproject.toml
docs/: MODEL_REFERENCE.md
src/gym_management/: __init__.py  main.py
src/gym_management/api/: deps.py  schemas.py
src/gym_management/api/routes/: equipment.py  membership.py  reports.py  subscriptions.py
src/gym_management/application/: __init__.py  repositories.py
src/gym_management/domain/: __init__.py
src/gym_management/domain/equipment/: __init__.py  equipment.py  maintenance_record.py  repair_record.py
src/gym_management/domain/finance/: __init__.py  budget.py  payment.py
src/gym_management/domain/membership/: __init__.py  medical_report.py  subscriber.py
src/gym_management/domain/subscription/: __init__.py  billing.py  package_factory.py  schedule_strategy.py  subscription.py  subscription_package.py
src/gym_management/infrastructure/: __init__.py  database.py  mappers.py  orm_models.py  repo_sqlalchemy.py  seed.py
src/gym_management/web/: ui_routes.py
src/gym_management/web/static/: styles.css
src/gym_management/web/templates/: base.html  budget.html  dashboard.html  equipment.html  members.html  packages.html  reports.html  subscriptions.html
tests/: test_budget_payment_sync.py  test_medical_report.py  test_subscription_billing.py  test_visit_schedule_strategy.py
