[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-management"
version = "0.1.0"
description = "Spor Salonu Yönetim Bilgi Sistemi — course project backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.10.0",
  "email-validator>=2.0.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gym_management = ["web/templates/*.html", "web/static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
